--- a/components/Home/Home.module.css
+++ b/components/Home/Home.module.css
@@ -119,6 +119,18 @@
     line-height: var(--text-line-height);
 }
 
+.BlogPreview-ArticleContent {
+    margin: 4px 0 0;
+}
+
+.BlogPreview-ArticleDate {
+    color: var(--inactive-color);
+}
+
+.BlogPreview-ArticleDate::before {
+    content: ' ';
+}
+
 /* Links */
 
 .Links {
@@ -215,4 +227,3 @@
         margin-bottom: 20px;
     }
 }
-
