--- a/components/Home/Home.module.css
+++ b/components/Home/Home.module.css
@@ -199,7 +199,7 @@
 }
 
 .Projects-Project_past .Projects-ProjectHeader {
-    font-weight: normal;
+    font-weight: var(--text-font-weight);
 
     color: var(--inactive-color);
 }
