--- a/components/Link/Link.module.css
+++ b/components/Link/Link.module.css
@@ -1,5 +1,5 @@
 .Link {
-    display: inline-block;
+    display: inline;
 
     color: inherit;
     text-decoration: none;
@@ -11,6 +11,10 @@
     padding-right: calc(var(--unit) * 0.5);
     margin-left: calc(var(--unit) * -0.5);
     margin-right: calc(var(--unit) * -0.5);
+}
+
+.Link_display_inline-block {
+    display: inline-block;
 }
 
 .Link_color_blue {
