--- a/components/BookShelf/BookShelf.module.css
+++ b/components/BookShelf/BookShelf.module.css
@@ -41,7 +41,7 @@
     transition: transform 0.1s ease-out;
 }
 
-.BookShelf-BookSpine:hover {
+.BookShelf-BookSpine[href]:hover {
     transform: scale(1.05) translateY(-8px);
 }
 
