--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,17 +3,17 @@
     --page-padding-y: 100px;
 
     --text-font-family: 'PT Root UI VF', 'Helvetica', sans-serif;
-    --text-font-weight: 450;
-    --text-font-size: 22px;
-    --text-line-height: 28px;
+    --text-font-weight: 500;
+    --text-font-size: 20px;
+    --text-line-height: 140%;
 
     --h1-font-size: 40px;
     --h1-line-height: 120%;
 
-    --h2-font-size: 30px;
+    --h2-font-size: 32px;
     --h2-line-height: 120%;
 
-    --h3-font-size: 25px;
+    --h3-font-size: 24px;
     --h3-line-height: 120%;
 
     --background-color-rgb: 255, 255, 255;
@@ -30,13 +30,10 @@
 
 @media (max-width: 1200px) {
     :root {
-        --page-padding-x: 60px;
-        --page-padding-y: 60px;
+        --page-padding-x: 64px;
+        --page-padding-y: 64px;
 
-        --text-font-size: 20px;
-        --text-line-height: 26px;
-
-        --h1-font-size: 28px;
+        --h1-font-size: 32px;
         --h2-font-size: 28px;
     }
 }
