--- a/components/BookShelf/BookShelf.module.css
+++ b/components/BookShelf/BookShelf.module.css
@@ -12,7 +12,7 @@
     font-size: var(--h2-font-size);
     line-height: var(--h2-line-height);
 
-    color: var(--inactive-color);
+    color: var(--secondary-color);
 }
 
 .BookShelf-SectionBooks {
