--- a/components/Home/Home.module.css
+++ b/components/Home/Home.module.css
@@ -66,7 +66,7 @@
 .Links-LinkUsername {
     display: none;
 
-    color: var(--inactive-color);
+    color: var(--secondary-color);
 }
 
 .Links-LinkUsername::before {
