--- a/components/NotFound/NotFound.module.css
+++ b/components/NotFound/NotFound.module.css
@@ -4,5 +4,5 @@
     font-size: var(--h1-font-size);
     line-height: var(--h1-line-height);
 
-    color: var(--inactive-color);
+    color: var(--secondary-color);
 }
