--- a/components/Link/Link.module.css
+++ b/components/Link/Link.module.css
@@ -6,7 +6,6 @@
 
     --unit: calc(var(--text-font-size) * 0.5);
 
-    border-radius: calc(var(--unit) * 0.5);
     padding-left: calc(var(--unit) * 0.5);
     padding-right: calc(var(--unit) * 0.5);
     margin-left: calc(var(--unit) * -0.5);
@@ -17,14 +16,22 @@
     display: inline-block;
 }
 
-.Link_color_blue {
-    color: var(--accent-color);
+.Link_color_transparent:hover {
+    background: rgba(var(--primary-color-rgb), 0.1);
 }
 
-.Link:hover {
-    background: rgba(var(--primary-color-rgb), 0.08);
+.Link_color_orange {
+    background: var(--orange-color);
+}
+
+.Link_color_orange:hover {
+    color: var(--orange-color);
+}
+
+.Link_color_blue {
+    background: var(--blue-color);
 }
 
 .Link_color_blue:hover {
-    background: rgba(var(--accent-color-rgb), 0.08);
+    color: var(--blue-color);
 }
