--- a/src/components/Link/Link.module.css
+++ b/src/components/Link/Link.module.css
@@ -4,9 +4,9 @@
     color: inherit;
     text-decoration: none;
 
-    --unit: calc(var(--text-font-size) * 0.25);
+    --unit: calc(var(--text-font-size) * 0.2);
 
-    border-radius: var(--unit);
+    border-radius: calc(var(--unit) * 0.5);
     padding-left: calc(var(--unit) * 0.5);
     padding-right: calc(var(--unit) * 0.5);
     margin-left: calc(var(--unit) * -0.5);
