--- a/src/components/ExperiencePage/ExperiencePage.module.css
+++ b/src/components/ExperiencePage/ExperiencePage.module.css
@@ -1,6 +1,8 @@
 .ExperiencePage {
     display: flex;
     flex-direction: column;
+
+    max-width: 840px;
 }
 
 .ExperiencePage-Company {
@@ -13,28 +15,15 @@
 .ExperiencePage-Period {
     margin: 16px 0 0;
 
-    font-size: var(--h2-font-size);
-    line-height: var(--h2-line-height);
-
     color: var(--secondary-color);
 }
 
 .ExperiencePage-Content {
     margin-top: 64px;
-
-    max-width: 700px;
 }
 
 .ExperiencePage-Content > :first-child {
     margin-top: 0;
-}
-
-.ExperiencePage-Content {
-    hyphens: auto;
-}
-
-.ExperiencePage-Content video {
-    margin: 1em 0;
 }
 
 .ExperiencePage-Content hr {
@@ -48,13 +37,18 @@
     opacity: 0.2;
 }
 
+.ExperiencePage-Content h1 {
+    margin: 6rem 0 1.2rem;
+
+    font-size: var(--h1-font-size);
+    line-height: var(--h1-line-height);
+}
+
 .ExperiencePage-Content h2 {
     margin: 3rem 0 1.2rem;
 
     font-size: var(--h2-font-size);
     line-height: var(--h2-line-height);
-
-    hyphens: none;
 }
 
 .ExperiencePage-Content h3 {
@@ -62,8 +56,6 @@
 
     font-size: var(--h3-font-size);
     line-height: var(--h3-line-height);
-
-    hyphens: none;
 }
 
 .ExperiencePage-Content a img {
@@ -72,6 +64,13 @@
 
 .ExperiencePage-Content img {
     width: 100%;
+}
+
+.ExperiencePage-Content img,
+.ExperiencePage-Content video {
+    border: 1px solid var(--divider-color);
+    border-bottom: 2px solid var(--divider-color);
+    border-radius: 8px;
 }
 
 .ExperiencePage-Content ul {
