--- a/src/components/Page/Page.module.css
+++ b/src/components/Page/Page.module.css
@@ -29,47 +29,22 @@
     white-space: nowrap;
 }
 
-.Page_direction_horizontal .Page-Menu {
-    flex-direction: column;
-}
-
-.Page_direction_vertical .Page-MenuLink + .Page-MenuLink {
+.Page-MenuLink + .Page-MenuLink {
     margin-left: 20px;
 }
 
-.Page_direction_horizontal .Page-MenuLink + .Page-MenuLink {
-    margin-top: 8px;
-}
-
-.Page-MenuLink_bold {
-    font-weight: 700;
-
+.Page-MenuLink_current {
     color: var(--primary-color);
 }
 
-.Page_direction_horizontal .Page-Container {
-    display: grid;
-    grid-template-columns: minmax(240px, 1fr) minmax(400px, 700px) 1fr;
-
-    position: relative;
+.Page-Content {
+    margin-top: var(--page-padding-y);
 }
 
-.Page_direction_vertical .Page-Content {
-    margin-top: 64px;
-}
+.Page-Menu,
+.Page-Content {
+    margin-left: auto;
+    margin-right: auto;
 
-@media (max-width: 1200px) {
-    .Page_direction_horizontal .Page-Container {
-        grid-template-columns: minmax(200px, 1fr) minmax(400px, 640px) 1fr;
-    }
-}
-
-@media (max-width: 960px) {
-    .Page_direction_horizontal .Page-Container {
-        grid-template-columns: auto;
-    }
-
-    .Page .Page-Content {
-        margin-top: var(--page-padding-y);
-    }
+    max-width: var(--page-max-width);
 }
