--- a/src/components/WritingPage/WritingPage.module.css
+++ b/src/components/WritingPage/WritingPage.module.css
@@ -11,7 +11,7 @@
     margin: 0;
 
     font-size: var(--h1-font-size);
-    line-height: var(--h1-line-height);
+    line-height: var(--header-line-height);
 }
 
 .WritingPage-Description {
@@ -44,14 +44,14 @@
     margin: 3rem 0 1.2rem;
 
     font-size: var(--h2-font-size);
-    line-height: var(--h2-line-height);
+    line-height: var(--header-line-height);
 }
 
 .WritingPage-Content h3 {
     margin: 2rem 0 1rem;
 
     font-size: var(--h3-font-size);
-    line-height: var(--h3-line-height);
+    line-height: var(--header-line-height);
 }
 
 .WritingPage-Content a img {
