--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,20 +1,17 @@
 :root {
     --page-padding-x: 10vw;
     --page-padding-y: 64px;
+    --page-max-width: 800px;
 
     --text-font-family: 'PT Root UI VF', 'Helvetica', sans-serif;
-    --text-font-weight: 500;
-    --text-font-size: 24px;
-    --text-line-height: 140%;
+    --text-font-weight: 480;
+    --text-font-size: 20px;
+    --text-line-height: 150%;
 
-    --h1-font-size: 48px;
-    --h1-line-height: 120%;
-
-    --h2-font-size: 32px;
-    --h2-line-height: 120%;
-
+    --h1-font-size: 40px;
+    --h2-font-size: 28px;
     --h3-font-size: 24px;
-    --h3-line-height: 120%;
+    --header-line-height: 120%;
 
     --background-color-rgb: 242, 241, 238;
     --background-color: rgb(var(--background-color-rgb));
@@ -30,20 +27,18 @@
 @media (max-width: 1200px) {
     :root {
         --page-padding-x: 64px;
-        --page-padding-y: 64px;
     }
 }
 
 @media (max-width: 960px) {
     :root {
         --h1-font-size: 36px;
-        --h2-font-size: 28px;
     }
 }
 
 @media (max-width: 540px) {
     :root {
-        --page-padding-x: 20px;
+        --page-padding-x: 24px;
         --page-padding-y: 40px;
     }
 }
