--- a/src/components/ExperiencePage/ExperiencePage.module.css
+++ b/src/components/ExperiencePage/ExperiencePage.module.css
@@ -31,13 +31,20 @@
 }
 
 .ExperiencePage-Content > hr {
-    margin: 2rem auto;
+    margin: 4rem auto;
 
     height: 2px;
-    width: 20%;
+    width: 100%;
 
     border: none;
-    background: var(--secondary-color);
+    background: linear-gradient(
+        to right,
+        var(--secondary-color),
+        var(--secondary-color) 60%,
+        transparent 60%,
+        transparent 100%
+    );
+    background-size: 40px 2px;
     opacity: 0.2;
 }
 
@@ -85,6 +92,14 @@
     font-size: 0.9em;
 
     color: var(--secondary-color);
+}
+
+.ExperiencePage-Content > p + :global(.Caption) {
+    margin-top: -1.3em;
+}
+
+.ExperiencePage-Content :global(.Caption) p {
+    margin: 0;
 }
 
 .ExperiencePage-Content > ul,
