--- a/src/components/BrowserContainer/BrowserContainer.module.css
+++ b/src/components/BrowserContainer/BrowserContainer.module.css
@@ -5,15 +5,14 @@
     border-radius: 8px;
 }
 
-.BrowserContainer .BrowserContainer-Window,
-.BrowserContainer > video {
-    display: block;
-
+.BrowserContainer-Window {
     width: 100%;
 
     border: none;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 6px;
+
+    overflow: hidden;
 }
 
 .BrowserContainer_type_image .BrowserContainer-Window {
@@ -36,20 +35,23 @@
     flex-direction: column;
 }
 
-.BrowserContainer-AddressStub {
-    padding: 8px 8px 8px 12px;
-    margin-bottom: 24px;
+.BrowserContainer-Dots {
+    margin: 8px;
 
-    font-size: 14px;
-    line-height: 16px;
+    display: flex;
+    gap: 5px;
+}
 
-    color: var(--secondary-color);
+.BrowserContainer-Dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+
     background: rgba(0, 0, 0, 0.06);
-    border-radius: 10px;
 }
 
 .BrowserContainer-SectionTitle {
-    margin-bottom: 12px;
+    margin: 16px 8px 12px;
 
     font-size: 12px;
     line-height: 1;
@@ -82,7 +84,7 @@
     color: var(--primary-color);
     background: transparent;
     border: none;
-    border-radius: 10px;
+    border-radius: 8px;
 
     transition: transform 0.1s ease-out;
 }
@@ -124,7 +126,7 @@
         gap: 8px;
     }
 
-    .BrowserContainer-AddressStub,
+    .BrowserContainer-Dots,
     .BrowserContainer-SectionTitle,
     .BrowserContainer-TabFavicon {
         display: none;
