--- a/src/components/WorkDescriptionPage/WorkDescriptionPage.module.css
+++ b/src/components/WorkDescriptionPage/WorkDescriptionPage.module.css
@@ -17,7 +17,7 @@
     flex-direction: column;
     gap: 4px;
 
-    color: var(--secondary-color);
+    color: var(--color-content-secondary);
 }
 
 .WorkDescriptionPage-Content {
@@ -43,8 +43,8 @@
     border: none;
     background: linear-gradient(
         to right,
-        var(--secondary-color),
-        var(--secondary-color) 60%,
+        var(--color-content-secondary),
+        var(--color-content-secondary) 60%,
         transparent 60%,
         transparent 100%
     );
@@ -83,7 +83,7 @@
 
 .WorkDescriptionPage-Content > p > img,
 .WorkDescriptionPage-Content > p > video {
-    border: 1px solid var(--divider-color);
+    border: 1px solid var(--color-background-glassy);
     border-radius: 8px;
 }
 
@@ -94,7 +94,7 @@
 
     font-size: 0.9em;
 
-    color: var(--secondary-color);
+    color: var(--color-content-secondary);
 }
 
 .WorkDescriptionPage-Content > p + :global(.Caption) {
