--- a/src/components/Page/Page.module.css
+++ b/src/components/Page/Page.module.css
@@ -1,11 +1,10 @@
 .Page_theme_dark {
-    --background-color-rgb: 10, 10, 10;
-    --background-color: rgb(var(--background-color-rgb));
+    --color-content-primary-rgb: 255, 255, 255;
+    --color-content-primary: rgb(var(--color-content-primary-rgb));
+    --color-content-secondary: rgba(var(--color-content-primary-rgb), 0.3);
 
-    --primary-color-rgb: 255, 255, 255;
-    --primary-color: rgb(var(--primary-color-rgb));
-
-    --secondary-color: rgba(var(--primary-color-rgb), 0.3);
+    --color-background-default: rgb(0, 0, 0);
+    --color-background-surface: rgb(10, 10, 10);
 }
 
 .Page {
@@ -17,14 +16,14 @@
     font-size: var(--text-font-size);
     line-height: var(--text-line-height);
 
-    background: var(--background-color);
-    color: var(--primary-color);
+    background: var(--color-background-surface);
+    color: var(--color-content-primary);
 }
 
 .Page-Menu {
     display: flex;
 
-    color: var(--secondary-color);
+    color: var(--color-content-secondary);
 
     white-space: nowrap;
 }
@@ -34,7 +33,7 @@
 }
 
 .Page-MenuLink_current {
-    color: var(--primary-color);
+    color: var(--color-content-primary);
 }
 
 .Page-Content {
