--- a/src/components/WorkDescriptionPage/WorkDescriptionPage.module.css
+++ b/src/components/WorkDescriptionPage/WorkDescriptionPage.module.css
@@ -52,24 +52,17 @@
     opacity: 0.2;
 }
 
-.WorkDescriptionPage-Content > h1 {
-    margin: 4rem 0 1.2rem;
-
-    font-size: var(--h1-font-size);
-    line-height: var(--header-line-height);
-}
-
 .WorkDescriptionPage-Content > h2 {
-    margin: 3rem 0 1.2rem;
+    margin: 5rem 0 1rem;
 
     font-size: var(--h2-font-size);
     line-height: var(--header-line-height);
 }
 
 .WorkDescriptionPage-Content > h3 {
-    margin: 2rem 0 1rem;
+    margin: 3rem 0 1rem;
 
-    font-size: var(--h3-font-size);
+    font-size: var(--text-font-size);
     line-height: var(--header-line-height);
 }
 
@@ -87,10 +80,14 @@
     border-radius: 8px;
 }
 
+.WorkDescriptionPage :global(.WideBlock) {
+    margin: 0 -200px;
+}
+
 .WorkDescriptionPage-Content :global(.Caption) {
     display: block;
 
-    margin-top: 0.3em;
+    margin-top: 0.5em;
 
     font-size: 0.9em;
 
@@ -98,7 +95,7 @@
 }
 
 .WorkDescriptionPage-Content > p + :global(.Caption) {
-    margin-top: -1.3em;
+    margin-top: -1.5em;
 }
 
 .WorkDescriptionPage-Content :global(.Caption) p {
